@@ -1,3 +1,8 @@
+2010-01-28  Uros Bizjak  <ubizjak@gmail.com>
+
+	PR target/42891
+	* gcc.target/i386/pr42891.c: New test.
+
 2010-01-28  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/42871
